# api-router

./: .gitignore  benchmark.py  benchmark2.py  index.html  package-lock.json  package.json  results.html  results.md  results2.md  run_benchmark.sh  run_benchmark2.sh
go-router/: go.mod
go-router/cmd/: main.go
go-router/pkg/: router.go
next-router/: package-lock.json  package.json
next-router/.next/: trace
next-router/.next/cache/: .tsbuildinfo  config.json
next-router/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
next-router/.next/server/vendor-chunks/: @babel.js  @swc.js  clsx.js  d3-array.js  d3-color.js  d3-format.js  d3-interpolate.js  d3-path.js  d3-scale.js  d3-shape.js  d3-time-format.js  d3-time.js  decimal.js-light.js  eventemitter3.js  fast-equals.js  internmap.js  lodash.js  next.js  object-assign.js  prop-types.js  react-is.js  react-smooth.js  react-transition-group.js  recharts-scale.js  recharts.js  tailwind-merge.js  tiny-invariant.js  victory-vendor.js
next-router/.next/static/chunks/: app-pages-internals.js  webpack.js
next-router/.next/static/webpack/: 103d7a4229648140.webpack.hot-update.json  webpack.103d7a4229648140.hot-update.js  (+2 more)
next-router/app/: globals.css  layout.tsx
next-router/app/dashboard/: dashboard.tsx  page.tsx
next-router/components/ui/: badge.tsx  card.tsx  chart.tsx  tabs.tsx
python-router/: main.py  requirements.txt
rust-router/: Cargo.toml
rust-router/src/: main.rs
rust-router/src/router/: mod.rs
(+19 files in other folders)
