[package]
name = "rust-router"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
bytes = "1.5"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
